[workspace]

members = [
  "crates/abq_cli",
  "crates/abq_hosted",
  "crates/abq_output",
  "crates/abq_queue",
  "crates/abq_runners/echo",
  "crates/abq_runners/exec",
  "crates/abq_runners/generic_test_runner",
  "crates/abq_runners/protocol",
  "crates/abq_test_support/with_protocol_version",
  "crates/abq_utils",
  "crates/abq_workers",
  "crates/reporters/junit_xml",
  "crates/reporters/rwx_v1_json",
]

[workspace.dependencies]
serde = "1.0.151"
serde_derive = "1.0.151"
serde_json = "1.0.91"

rustls = "0.20.7"
rustls-pemfile = "1.0.1"

tokio = { version = "1.21.2", features = [
  "io-util",
  "net",
  "rt",
  "macros",
  "sync",
  "time",
  "process",
] }
tokio-rustls = "0.23.4"
futures = "0.3.25"

parking_lot = "0.12.1"

signal-hook = "0.3.14"
rand = "0.8.5"
rand_chacha = "0.3.1"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"

thiserror = "1.0.38"
anyhow = "1.0.68"
indoc = "1.0.8"

clap = { version = "4.0.30", features = ["derive", "env"] }
atty = "0.2.14"
num_cpus = "1.15.0"
termcolor = "1.1.3"

async-trait = "0.1.60"
static_assertions = "1.1.0"
derive_more = "0.99.17"

# --- Development ---

insta = { version = "1.21.2", features = ["json"] }
paste = "1.0.11"

tempfile = "3.3.0"
tracing-test = "0.2.3"

ntest = "0.9.0"
serial_test = "0.10.0"
nix = "0.26.1"

[workspace.dependencies.uuid]
version = "1.2.2"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# documentation: https://doc.rust-lang.org/stable/cargo/reference/profiles.html
# a guide to makign rust binaries smaller: https://github.com/johnthagen/min-sized-rust
# some minimal experimentation with these flags: https://docs.google.com/spreadsheets/d/1ley23pp_uvSQiy_jbTUc2K1cvoc2dCO_9MptyAue-DA/edit#gid=0
[profile.release]
lto = "fat"       # this should create faster & smaller builds at the cost of compile time
strip = "symbols" # with this set, we can't use gdb (we still can aginst dev builds)
opt-level = "s"   # may be slightly slower than the default of 3, but the benchmark results don't show any significant speed difference
panic = "abort"   # disable rust backtraces on panic
codegen-units = 1 # disables parallelism during the build, making the code faster & smaller at the cost of compile time
