[package]
edition = "2021"
name = "libabq"
version = "0.1.0"

[dependencies]
abq_worker_protocol = { path = "../workers/protocol" }
abq_echo_worker = { path = "../workers/echo" }

procspawn = "0.10.1"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
tempfile = "3.3.0"

[dev-dependencies]
ntest = "0.7.5"
procspawn = { version = "0.10.1", features = ["test-support"] }
