[package]
edition = "2021"
name = "libabq"
version = "0.1.0"

[dependencies]
abq_worker_protocol = { path = "../workers/protocol" }
abq_echo_worker = { path = "../workers/echo" }
abq_exec_worker = { path = "../workers/exec" }

anyhow = "1.0.57"
procspawn = "0.10.1"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"

[dependencies.uuid]
version = "1.1.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
ntest = "0.7.5"
procspawn = { version = "0.10.1", features = ["test-support"] }
tempfile = "3.3.0"
