[package]
name = "abq"
version = "1.0.6"
edition = "2021"

[dependencies]
abq_queue = { path = "../abq_queue" }
abq_output = { path = "../abq_output" }
abq_workers = { path = "../abq_workers" }
abq_utils = { path = "../abq_utils" }
abq_hosted = { path = "../abq_hosted" }
abq_junit_xml = { path = "../reporters/junit_xml" }
abq_rwx_v1_json = { path = "../reporters/rwx_v1_json" }

anyhow.workspace = true
signal-hook.workspace = true
serde_json.workspace = true
thiserror.workspace = true

clap.workspace = true
num_cpus.workspace = true
termcolor.workspace = true
atty.workspace = true
indicatif.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

indoc.workspace = true

[target.x86_64-unknown-linux-musl.dependencies]
mimalloc = "0.1.34"

[dev-dependencies]
abq_utils = { path = "../abq_utils", features = ["expose-native-protocols"] }
abq_test_utils = { path = "../abq_test_support/abq_test_utils" }
abq_native_runner_simulation = { path = "../abq_test_support/native_runner_simulator" }
insta.workspace = true
paste.workspace = true
serial_test.workspace = true
nix.workspace = true
tempfile.workspace = true

[features]
test-abq-jest = []
