[package]
name = "abq"
version = "1.7.2"
edition = "2021"

[dependencies]
abq_queue = { path = "../abq_queue" }
abq_reporting = { path = "../abq_reporting" }
abq_workers = { path = "../abq_workers" }
abq_utils = { path = "../abq_utils" }
abq_hosted = { path = "../abq_hosted" }

abq_dot_reporter = { path = "../reporters/dot" }
abq_line_reporter = { path = "../reporters/line" }
abq_progress_reporter = { path = "../reporters/progress" }
abq_junit_xml = { path = "../reporters/junit_xml" }
abq_rwx_v1_json = { path = "../reporters/rwx_v1_json" }

anyhow.workspace = true
async-trait.workspace = true
signal-hook.workspace = true
signal-hook-tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
etcetera.workspace = true
toml.workspace = true

clap.workspace = true
num_cpus.workspace = true
termcolor.workspace = true
atty.workspace = true
indicatif.workspace = true
tempfile.workspace = true

fnv.workspace = true

tokio.workspace = true

tokio-cron-scheduler.workspace = true
cron.workspace = true

futures.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

indoc.workspace = true

[dev-dependencies]
abq_utils = { path = "../abq_utils", features = ["expose-native-protocols"] }
abq_test_utils = { path = "../abq_test_support/abq_test_utils" }
abq_reporting_test_utils = { path = "../abq_test_support/abq_reporting_test_utils" }
abq_native_runner_simulation = { path = "../abq_test_support/native_runner_simulator" }
abq_run_n_times = { path = "../abq_test_support/run_n_times" }
abq_with_protocol_version = { path = "../abq_test_support/with_protocol_version" }
insta.workspace = true
paste.workspace = true
serial_test.workspace = true
nix.workspace = true
ntest.workspace = true
tempfile.workspace = true
rand.workspace = true
regex.workspace = true
mockito.workspace = true

[features]
test-abq-jest = []
s3 = ["abq_queue/s3"]
