[package]
name = "abq_hosted"
version = "0.1.0"
edition = "2021"

[dependencies]
abq_utils = { path = "../abq_utils" }

serde = "1.0.147"
url = { version = "2.3.1", features = ["serde"] }
thiserror = "1.0.37"
tracing = "0.1.37"

[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[dev-dependencies]
mockito = "0.31.0"
