[package]
name = "abq_hosted"
version = "0.1.0"
edition = "2021"

[dependencies]
abq_utils = { path = "../abq_utils" }

serde.workspace = true
url = { version = "2.3.1", features = ["serde"] }
thiserror.workspace = true
tracing.workspace = true

[dependencies.reqwest]
version = "0.11.14"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[dev-dependencies]
mockito = "1.0.0"
