[package]
name = "abq_hosted"
version = "0.1.0"
edition = "2021"

[dependencies]
abq_utils = { path = "../abq_utils" }

serde.workspace = true
serde_derive.workspace = true
url = { version = "2.3.1", features = ["serde"] }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[dependencies.reqwest]
version = "0.11.15"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
mockito.workspace = true
