[package]
edition = "2021"
name = "abq_output"
version = "0.1.0"

[dependencies]
abq_workers = { path = "../abq_workers" }
abq_runner_protocol = { path = "../abq_runners/protocol" }
abq_utils = { path = "../abq_utils" }

termcolor = "1.2.0"

[dev-dependencies]
insta.workspace = true
abq_utils = { path = "../abq_utils", features = ["expose-native-protocols"] }
