[package]
edition = "2021"
name = "abq_queue"
version = "0.1.0"

[dependencies]
abq_workers = { path = "../abq_workers" }
abq_utils = { path = "../abq_utils" }

serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true

static_assertions.workspace = true

thiserror.workspace = true
tracing.workspace = true

tokio.workspace = true
futures.workspace = true

anyhow.workspace = true

[dev-dependencies]
abq_utils = { path = "../abq_utils", features = ["expose-native-protocols"] }
abq_test_utils = { path = "../abq_test_support/abq_test_utils" }
abq_with_protocol_version = { path = "../abq_test_support/with_protocol_version" }
abq_run_n_times = { path = "../abq_test_support/run_n_times" }
abq_native_runner_simulation = { path = "../abq_test_support/native_runner_simulator" }

insta.workspace = true
ntest.workspace = true
tempfile.workspace = true
tracing-test.workspace = true
tracing-subscriber.workspace = true
serial_test.workspace = true
