[package]
edition = "2021"
name = "abq_queue"
version = "0.1.0"

[dependencies]
abq_workers = { path = "../abq_workers" }
abq_utils = { path = "../abq_utils" }

serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

parking_lot.workspace = true
moka.workspace = true
tempfile.workspace = true
fs4.workspace = true

static_assertions.workspace = true

thiserror.workspace = true
tracing.workspace = true

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
pin-project-lite.workspace = true

anyhow.workspace = true

aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }

[features]
s3 = [
  "dep:aws-config",
  "dep:aws-sdk-s3",
]

[dev-dependencies]
abq_reporting = { path = "../abq_reporting" }
abq_utils = { path = "../abq_utils", features = ["expose-native-protocols"] }
abq_test_utils = { path = "../abq_test_support/abq_test_utils" }
abq_with_protocol_version = { path = "../abq_test_support/with_protocol_version" }
abq_run_n_times = { path = "../abq_test_support/run_n_times" }
abq_native_runner_simulation = { path = "../abq_test_support/native_runner_simulator" }
aws-smithy-http = { workspace = true }
http = { workspace = true }

indoc.workspace = true
insta.workspace = true
ntest.workspace = true
tracing-test.workspace = true
tracing-subscriber.workspace = true
serial_test.workspace = true
