[package]
edition = "2021"
description = "Basic utilities for reporting, writing test results."
name = "abq_reporting"
version = "0.1.0"

[dependencies]
abq_utils = { path = "../abq_utils" }

termcolor.workspace = true
indoc.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
abq_utils = { path = "../abq_utils", features = ["expose-native-protocols"] }
abq_test_utils = { path = "../abq_test_support/abq_test_utils" }
