[package]
name = "abq_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
tokio-rustls = "0.23.4"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"

tokio = { version = "1.21.2", features = ["io-util", "net", "rt", "macros", "sync", "time"] }
tracing = "0.1.37"
rand = "0.8.5"
rand_chacha = "0.3.1"

thiserror = "1.0.37"
async-trait = "0.1.58"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
default = []
test-actions = []
