[package]
name = "abq_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true

serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

tokio.workspace = true

tracing.workspace = true

rand.workspace = true
rand_chacha.workspace = true
uuid.workspace = true

thiserror.workspace = true
async-trait.workspace = true

static_assertions.workspace = true
derive_more.workspace = true
flate2 = "1.0.25"

anyhow.workspace = true

[dev-dependencies]
insta.workspace = true

[features]
default = []
test-actions = []
expose-native-protocols = []
