[package]
edition = "2021"
name = "abq_workers"
version = "0.1.0"

[dependencies]
abq_runner_protocol = { path = "../abq_runners/protocol" }
abq_generic_test_runner = { path = "../abq_runners/generic_test_runner" }
abq_echo_worker = { path = "../abq_runners/echo" }
abq_exec_worker = { path = "../abq_runners/exec" }
abq_utils = { path = "../abq_utils" }

thiserror = "1.0.37"
procspawn = "0.10.1"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"

parking_lot = "0.12.1"
tokio = { version = "1.21.2", features = ["net", "rt", "rt-multi-thread", "sync", "macros", "time"] }
futures = "0.3.25"

tracing = "0.1.37"

[dev-dependencies]
procspawn = { version = "0.10.1", features = ["test-support"] }
tempfile = "3.3.0"
tracing-test = "0.2.3"

[features]
default = []
test-actions = ["abq_utils/test-actions"]
