[package]
edition = "2021"
name = "abq_workers"
version = "0.1.0"

[dependencies]
abq_runner_protocol = { path = "../abq_runners/protocol" }
abq_generic_test_runner = { path = "../abq_runners/generic_test_runner" }
abq_echo_worker = { path = "../abq_runners/echo" }
abq_exec_worker = { path = "../abq_runners/exec" }
abq_utils = { path = "../abq_utils" }

thiserror.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

parking_lot.workspace = true
tokio.workspace = true
futures.workspace = true

tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-test.workspace = true
abq_utils = { path = "../abq_utils", features = ["expose-native-protocols"] }
abq_with_protocol_version = { path = "../abq_test_support/with_protocol_version" }

[features]
default = []
test-actions = ["abq_utils/test-actions"]
