[package]
edition = "2021"
name = "abq_workers"
version = "0.1.0"

[dependencies]
abq_generic_test_runner = { path = "../abq_runners/generic_test_runner" }
abq_utils = { path = "../abq_utils" }

thiserror.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

parking_lot.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

tracing.workspace = true

[dev-dependencies]
tracing-test.workspace = true
tempfile.workspace = true
abq_utils = { path = "../abq_utils", features = ["expose-native-protocols"] }
abq_test_utils = { path = "../abq_test_support/abq_test_utils" }
abq_run_n_times = { path = "../abq_test_support/run_n_times" }
abq_with_protocol_version = { path = "../abq_test_support/with_protocol_version" }

[features]
default = []
test-actions = ["abq_utils/test-actions"]
