[package]
name = "abq_cargo"
description = "ABQ native runner for the cargo test runner."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "abq_cargo"
path = "src/bin.rs"

[dependencies]
abq_utils = { path = "../../abq_utils" }
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"

tracing = "0.1.36"
clap = { version = "3.2.22", features = ["derive"] }
anyhow = "1.0.65"

[features]
test-abq-jest = []

[dev-dependencies]
insta = "1.20.0"
