[package]
name = "abq_cargo"
description = "ABQ native runner for the cargo test runner."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "abq_cargo"
path = "src/bin.rs"

[dependencies]
abq_utils = { path = "../../abq_utils" }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"

tracing = "0.1.37"
clap = { version = "4.0.19", features = ["derive"] }
anyhow = "1.0.66"

[features]
test-abq-jest = []

[dev-dependencies]
insta = "1.21.0"
