[package]
name = "abq_cargo"
description = "ABQ native runner for the cargo test runner."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "abq_cargo"
path = "src/bin.rs"

[dependencies]
abq_utils = { path = "../../abq_utils" }
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

tracing.workspace = true
clap.workspace = true
anyhow.workspace = true

[features]
test-abq-jest = []

[dev-dependencies]
insta = "1.21.2"
