[package]
name = "abq_generic_test_runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "abq_generic_test_runner"
path = "src/lib.rs"

[[bin]]
name = "abq_worker_harness"
path = "src/test_harness.rs"

[dependencies]
abq_runner_protocol = { path = "../protocol" }
abq_utils = { path = "../../abq_utils" }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"

tracing = "0.1.37"
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1.0.66"
thiserror = "1.0.37"
indoc = "1.0.7"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
test-abq-jest = []

[dev-dependencies]
insta = { version = "1.21.0", features = ["json"] }
