[package]
name = "abq_generic_test_runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "abq_generic_test_runner"
path = "src/lib.rs"

[[bin]]
name = "abq_worker_harness"
path = "src/test_harness.rs"

[dependencies]
abq_runner_protocol = { path = "../protocol" }
abq_utils = { path = "../../abq_utils" }
serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
futures.workspace = true

tracing.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
indoc.workspace = true
uuid.workspace = true

[features]
test-abq-jest = []

[dev-dependencies]
insta.workspace = true
