# NOTE: make sure this package is built before running tests.
# Until https://github.com/rust-lang/cargo/issues/9096 lands dependers cannot
# rely explicitly on this package.

[package]
name = "abq_native_runner_simulation"
version = "0.1.0"
edition = "2021"
description = "Simulates a native test runner."

[lib]
name = "abq_native_runner_simulation"
path = "src/lib.rs"

[[bin]]
name = "abqtest_native_runner_simulation"
path = "src/bin.rs"

[dependencies]
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

tokio.workspace = true
tempfile.workspace = true

abq_utils = { path = "../../abq_utils" }
